--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
               <button class="navbar-link" data-nav-link>Education</button>
             </li>
 
-            <li class="navbar-item">
+            <!-- <li class="navbar-item">
               <button class="navbar-link" data-nav-link>Portfolio</button>
-            </li>
+            </li> -->
 
-            <li class="navbar-item">
+            <!-- <li class="navbar-item">
               <button class="navbar-link" data-nav-link>Blog</button>
-            </li>
+            </li> -->
 
             <li class="navbar-item">
               <button class="navbar-link" data-nav-link>Contact</button>
@@ -285,7 +285,7 @@
           - testimonials
         -->
 
-          <section class="testimonials">
+          <!-- <section class="testimonials">
             <h3 class="h3 testimonials-title">Testimonials</h3>
 
             <ul class="testimonials-list has-scrollbar">
@@ -413,7 +413,7 @@
                 </div>
               </li>
             </ul>
-          </section>
+          </section> -->
 
           <!--
           - testimonials modal
@@ -1159,7 +1159,7 @@
           <section class="mapbox" data-mapbox>
             <figure>
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30879.213020989424!2d78.71872127110198!3d14.661523718924572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb37bf2affbaf07%3A0x877fa1b02d15609d!2sKhajipet%20Bus%20Stop!5e0!3m2!1sen!2sin!4v1662274495151!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3194.856507918821!2d77.1174914577818!3d11.01944810105703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8543482ac3d4d%3A0xa480bec83569f4e!2sVasantha%20Vihar%20Park!5e1!3m2!1sen!2sin!4v1728140002905!5m2!1sen!2sin"
                 width="400"
                 height="300"
                 loading="lazy"
